# inspector

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
admin/: Dockerfile  entrypoint.sh  pyproject.toml
admin/admin/admin/: asgi.py  container.py  settings.py  urls.py  wsgi.py
admin/admin/admin_modules/: apps.py
admin/admin/admin_modules/annotation/: models.py  serializers.py  urls.py  views.py
admin/admin/admin_modules/annotation/migrations/: 0001_initial.py
admin/admin/admin_modules/authentication/: models.py  serilalizers.py  urls.py  views.py
admin/admin/admin_modules/authentication/migrations/: 0001_initial.py
admin/admin/admin_modules/core/models/: mixins.py
admin/admin/admin_modules/core/serializers/: token.py
admin/admin/admin_modules/defects/: models.py  serializers.py  urls.py  views.py
admin/admin/admin_modules/defects/migrations/: 0001_initial.py  0002_remove_defect_bbox_x1_remove_defect_bbox_x2_and_more.py  0003_remove_defect_model.py
admin/admin/admin_modules/media/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
admin/admin/admin_modules/media/migrations/: 0001_initial.py  (+5 more)
admin/admin/admin_modules/ml_models/: models.py  serilaizers.py  urls.py  views.py
admin/admin/admin_modules/oidc/: serializers.py  views.py
admin/admin/admin_modules/projects/: models.py  serializers.py  urls.py  views.py
admin/admin/admin_modules/reports/: models.py  serializers.py  urls.py  views.py
admin/admin/admin_modules/users/: urls.py  views.py
admin/admin/config/: server.example.conf
broker/: Dockerfile
(+57 files in other folders)
