[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["Romanov Danila <romanov9617@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
psycopg-binary = "^3.2.7"
psycopg = "^3.2.7"
ruff = "^0.11.9"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
